# op-tcg-leaderboard

./: .env.template  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.crawler  LICENSE  README.md  build_frontend.py  entrypoint.py  firestore.rules  pyproject.toml  requirements.txt  setup.py  update_htmx.sh  vercel.json
.claude/: settings.local.json  ui-guidelines.md
.claude/skills/: component.md  review.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md
.github/workflow/: terraform.yml
.github/workflows/: _deploy-reusable.yml  _terraform-reusable.yml  ci.yml  deploy-pr.yml  deploy.yml  google-cloudrun-docker.yml  terraform.yml
.streamlit/: config.toml
.vercel/: README.md
.vercel/output/: config.json
api/: index.py
components/nivo_charts/nivo_charts/: __init__.py  example.py
op_tcg/: cli_app.py  crawling_test.py
op_tcg/api/: index.py
op_tcg/backend/: auth.py  db.py  elo.py  utils.py
op_tcg/backend/crawling/: common.py  items.py  middlewares.py  pipelines.py
op_tcg/backend/etl/: base.py  classes.py  extract.py  load.py  load_update.py  transform.py
op_tcg/backend/models/: base.py  bq.py  bq_classes.py  bq_enums.py  cards.py  common.py  decklists.py  input.py  leader.py  matches.py  sealed.py  storage.py  tournaments.py  transform.py
op_tcg/backend/utils/: annotations.py  color_fns.py  database.py  environment.py  leader_fns.py  utils.py
op_tcg/cli/: crawling.py  etl.py  frontend.py
op_tcg/crawling/: pipelines.py  selenium_fns.py
op_tcg/crawling/spiders/: limitless.py
op_tcg/etl/: extract.py
op_tcg/frontend/: Leaderboard.py  app.py  cli.py  extract.py  fix_streamlit_elements.py  main.py  sidebar.py  utils.py
op_tcg/frontend/api/: models.py
op_tcg/frontend/components/: card_modal.py  decklist.py  decklist_builder.py  decklist_export.py  decklist_modal.py  decklist_watchlist_toggle.py  filters.py  info_modal.py  layout.py  loading.py  matchup.py  prices.py  sidebar.py  tournament.py  tournament_charts.py  watchlist_toggle.py
op_tcg/frontend/html/: modal.html
op_tcg/frontend/models/: session.py
op_tcg/frontend/pages/: 1_Leader_Meta_Analysis.py  2_Leader_Detail_Analysis.py  2_Leader_Detail_Analysis_Decklists.py  3_Admin_Leader_Upload.py  Admin_Leader_Upload.py  Leader_Detail_Analysis.py  Leader_Detail_Analysis_Decklists.py  Leader_Meta_Analysis.py  __init__.py  about.py  bug_report.py  card_movement.py  card_popularity.py  deckbuilder.py  home.py  leader.py  login.py  (+9 more)
op_tcg/frontend_fasthtml/: main.py  requirements.txt
op_tcg/models/: input.py  matches.py
public/: robots.txt  sitemap.xml
public/css/: decklist.css  leaderboard.css  loading.css  tooltip.css
public/js/: card-modal.js  charts.js  deckbuilder.js  decklist-modal.js  decklist_builder.js  donut.js  double_range_slider.js  htmx-loader.js  multiselect.js  sidebar.js  utils.js
static/css/: double_range_slider.css  list_view.css  loading.css
static/js/: sidebar.js
terraform/: README.md  main.tf  setup_cloud_function.sh  terraform.tfvars.template  terraform_apply.sh  variables.tf
terraform/cloud_functions/: main.py
(+170 files in other folders)
