[tool.poetry]
name = "op-tcg"
version = "0.1.0"
description = ""
authors = ["fteutsch <florianteutsch@yahoo.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "op_tcg"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^1.0.0"
pydantic = "^2.6.0"
click = "^8.1.7"
google-cloud-bigquery = "^3.20.1"
pandas = "^2.2.2"
pyarrow = "^15.0.2"
db-dtypes = "^1.2.0"
google-cloud-storage = "^2.16.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
sqlmodel = "^0.0.16"


[tool.poetry.group.crawler.dependencies]
requests = "^2.31.0"
scrapy = "^2.11.1"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.frontend.dependencies]
streamlit = "^1.33.0"
streamlit-elements = "0.1.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
optcg = 'op_tcg.cli_app:app'